--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,18 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = -v --tb=short --cov=src --cov-report=term-missing --cov-report=html
 asyncio_mode = auto
+
+[coverage:run]
+source = src
+omit = 
+    */tests/*
+    */test_*.py
+    */__pycache__/*
+    */venv/*
+
+[coverage:report]
+precision = 2
+show_missing = True
+skip_covered = False
